--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
 
 
  a:hover {
-   color: #0dc0c0;
+   color: #00A791;
    text-decoration: none;
  }
 
@@ -464,6 +464,8 @@ body {
    position: relative;
  }
 
+
+
  .nav a {
    font-weight: 700;
    padding-left: 20px;
@@ -496,6 +498,11 @@ body {
     color: #333;
     padding: 0 20px;
 }
+
+.header.fixed .header-right ul li a:hover {
+    color: #00A791;
+}
+
 
  /*-------  top  --------*/
  #top {
