--- a/css/style.css
+++ b/css/style.css
@@ -555,6 +555,7 @@ body {
      font-size: 2.5rem;
      padding-top: 20px;
      opacity: 0.7;
+     color: white;
  }
 
  /*-------  about  --------*/
