remove wrapper from header

--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ body {
    position: fixed;
    z-index: 10;
  }
- .header .wrapper {
+ .header .header-wrapper {
      position: relative;
  }
 
