--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,9 @@ body {
    margin: 0 auto;
  }
 
+.container {
+  width: 100%;
+}
 /*parts*/
 
  .heading {
@@ -170,72 +173,71 @@ body {
   100% { transform: rotate(360deg); transform: rotate(360deg); }
 }
 /*button*/
+a {
+ padding-top: 60px;
+}
+a span {
+ position: absolute;
+ top: 0;
+ left: 50%;
+ width: 24px;
+ height: 24px;
+ margin-left: -12px;
+ border-left: 1px solid #fff;
+ border-bottom: 1px solid #fff;
+ -webkit-transform: rotate(-45deg);
+ transform: rotate(-45deg);
+ -webkit-animation: sdb 2s infinite;
+ animation: sdb 2s infinite;
+ box-sizing: border-box;
+}
+@-webkit-keyframes sdb {
+ 0% {
+   -webkit-transform: rotate(-45deg) translate(0, 0);
+ }
+ 20% {
+   -webkit-transform: rotate(-45deg) translate(-10px, 10px);
+ }
+ 40% {
+   -webkit-transform: rotate(-45deg) translate(0, 0);
+ }
+}
+@keyframes sdb {
+ 0% {
+   transform: rotate(-45deg) translate(0, 0);
+ }
+ 20% {
+   transform: rotate(-45deg) translate(-10px, 10px);
+ }
+ 40% {
+   transform: rotate(-45deg) translate(0, 0);
+ }
+}
 
-
- a {
-  padding-top: 60px;
+ .scroll{
+   position: absolute;
+ bottom: 20px;
+ left: 50%;
+ z-index: 2;
+ display: inline-block;
+ -webkit-transform: translate(0, -50%);
+ transform: translate(0, -50%);
+ text-decoration: none;
  }
- a span {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 24px;
-  height: 24px;
-  margin-left: -12px;
-  border-left: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  -webkit-animation: sdb 2s infinite;
-  animation: sdb 2s infinite;
-  box-sizing: border-box;
- }
- @-webkit-keyframes sdb {
-  0% {
-    -webkit-transform: rotate(-45deg) translate(0, 0);
-  }
-  20% {
-    -webkit-transform: rotate(-45deg) translate(-10px, 10px);
-  }
-  40% {
-    -webkit-transform: rotate(-45deg) translate(0, 0);
-  }
- }
- @keyframes sdb {
-  0% {
-    transform: rotate(-45deg) translate(0, 0);
-  }
-  20% {
-    transform: rotate(-45deg) translate(-10px, 10px);
-  }
-  40% {
-    transform: rotate(-45deg) translate(0, 0);
-  }
+ .scroll span {
+   position: absolute;
+   top: 0;
+   left: 50%;
+   width: 24px;
+   height: 24px;
+   margin-left: -12px;
+   border-left: 1px solid #fff;
+   border-bottom: 1px solid #fff;
+   -webkit-transform: rotate(-45deg);
+   transform: rotate(-45deg);
+   box-sizing: border-box;
  }
 
-  .scroll{
-  	position: absolute;
- 	bottom: 20px;
- 	left: 50%;
- 	z-index: 2;
- 	display: inline-block;
- 	-webkit-transform: translate(0, -50%);
- 	transform: translate(0, -50%);
- 	text-decoration: none;
-  }
-  .scroll span {
-  	position: absolute;
-  	top: 0;
-  	left: 50%;
-  	width: 24px;
-  	height: 24px;
-  	margin-left: -12px;
-  	border-left: 1px solid #fff;
-  	border-bottom: 1px solid #fff;
-  	-webkit-transform: rotate(-45deg);
-  	transform: rotate(-45deg);
-  	box-sizing: border-box;
-  }
 
  .shadow {
      color: #fff;
@@ -393,7 +395,7 @@ body {
    position: fixed;
    top: 0;
    left: 0;
-   min-width: 100%;
+   width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
@@ -436,8 +438,20 @@ body {
  }
 
  .movie-wrapper {
-   padding-top: 30px;
- }
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.movie-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
  .step-wrapper {
    margin: 50px auto 0;
