--- a/css/style.css
+++ b/css/style.css
@@ -409,11 +409,13 @@ a span {
      padding: 250px 0px 240px;
  }
  #top h1{
-    font-size: 4.5rem;
+    text-align: left;
+    font-size: 6.5rem;
     color: white;
     opacity: 0.7;
+    font-family: 'Tahoma';
  }
-
+ /*type*/
  #top p{
      font-size: 2.5rem;
      padding-top: 20px;
