--- a/css/responsive.css
+++ b/css/responsive.css
@@ -75,4 +75,8 @@
     padding-bottom: 25px;
     font-size: 1.0rem;
   }
+  /*--- footer ---*/
+  .main_footer .footer_logo img {
+      width: 250px;
+  }
 }
