--- a/css/style.css
+++ b/css/style.css
@@ -389,8 +389,6 @@ a span {
    z-index: -2;
  }
 
-
-
  .video {
    position: fixed;
    top: 0;
@@ -410,7 +408,7 @@ a span {
  }
  #top h1{
     text-align: left;
-    font-size: 6.5rem;
+    font-size: 4.5rem;
     color: white;
     opacity: 0.7;
     font-family: 'Tahoma';
@@ -647,6 +645,7 @@ a span {
    font-size: 4.0rem;
    color: #00A791;
    position: relative;
+   font-family: 'Tahoma';
  }
  .service-content {
    padding-bottom: 25px;
