--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ a span {
    z-index: -2;
  }
 
- .video {
+ video {
    position: fixed;
    top: 0;
    left: 0;
@@ -402,6 +402,17 @@ a span {
    -webkit-filter: brightness(80%);
    filter:brightness(80%);
  }
+ /*.video {
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -3;
+}*/
 
  .inner-bg {
      padding: 250px 0px 240px;
