--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,7 @@ a span {
     color: #00A791;
 }
 .header.fixed .header-right ul li a.active {
-    border: solid 2px #EB5635;
+    color: #EB5635;
 }
 
  /*-------  Top  --------*/
@@ -449,21 +449,23 @@ a span {
   font-size: 2.0rem;
  }
 
- .movie-wrapper {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden;
-}
+ /*.youtube {
+   padding: 0 180px;
+ }*/
 
-.movie-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+ .movie-wrapper {
+ 	position: relative;
+ 	height: 0;
+ 	padding: 30px 0 56.25%;
+ 	overflow: hidden;
+ }
+ .movie-wrapper iframe {
+ 	position: absolute;
+ 	top: 0;
+ 	left: 0;
+ 	width: 100%;
+ 	height: 100%;
+ }
 
  .step-wrapper {
    margin: 50px auto 0;
@@ -503,9 +505,9 @@ a span {
  .feature-img{
    width: 20%;
    height: 20%;
-   -webkit-border-radius:50%;
+   /*-webkit-border-radius:50%;
    border-radius:50%;
-   border:3px solid #AAAAAA;
+   border:3px solid #AAAAAA;*/
    margin:0 10px;
 }
  .feature-1 {
@@ -544,7 +546,7 @@ a span {
 
  .feature-3 {
   padding: 120px 0 120px;
-  background-image: url('../images/feature-3.png');
+  background-image: url('../images/feature-3-dark.png');
   background-attachment: fixed;
   -webkit-background-size: cover;
   background-position: center center;
