--- a/css/style.css
+++ b/css/style.css
@@ -177,19 +177,7 @@ a {
  padding-top: 60px;
 }
 a span {
- position: absolute;
- top: 0;
- left: 50%;
- width: 24px;
- height: 24px;
- margin-left: -12px;
- border-left: 1px solid #fff;
- border-bottom: 1px solid #fff;
- -webkit-transform: rotate(-45deg);
- transform: rotate(-45deg);
- -webkit-animation: sdb 2s infinite;
  animation: sdb 2s infinite;
- box-sizing: border-box;
 }
 @-webkit-keyframes sdb {
  0% {
@@ -223,19 +211,7 @@ a span {
    -webkit-transform: translate(0, -50%);
    transform: translate(0, -50%);
    text-decoration: none;
- }
- .scroll span {
-   position: absolute;
-   top: 0;
-   left: 50%;
-   width: 24px;
-   height: 24px;
-   margin-left: -12px;
-   border-left: 1px solid #fff;
-   border-bottom: 1px solid #fff;
-   -webkit-transform: rotate(-45deg);
-   transform: rotate(-45deg);
-   box-sizing: border-box;
+   display: block;
  }
 
 
