--- a/css/style.css
+++ b/css/style.css
@@ -479,6 +479,7 @@ a span {
   background-repeat: no-repeat;
   background-position: right bottom;
   background-attachment: fixed;
+  background: black;
   -webkit-background-size: cover;
   color: white;
   background-size: cover;
