--- a/css/style.css
+++ b/css/style.css
@@ -424,19 +424,23 @@ a span {
  .about-text {
   font-size: 2.0rem;
  }
-
+ .youtube {
+    max-width: 675px;
+    margin: 0 auto;
+ }
  .movie-wrapper {
- 	position: relative;
- 	height: 0;
- 	padding: 100px 0 56.25%;
- 	overflow: hidden;
+   position: relative;
+   padding-bottom: 56.25%;
+   padding-top: 30px;
+   height: 0;
+   overflow: hidden;
  }
  .movie-wrapper iframe {
- 	position: absolute;
- 	top: 0;
- 	left: 0;
- 	width: 100%;
- 	height: 100%;
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
  }
 
  .step-wrapper {
