feature img attachment scroll

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -80,12 +80,12 @@
   .fea .box-content {
     font-size:1.0rem;
   }
-  /*.feature-1 {
+  .feature-1 {
     background-attachment: scroll;
-  }*/
-  /*.feature-3 {
+  }
+  .feature-3 {
     background-attachment: scroll;
-  }*/
+  }
   /*--- case--- */
   #case .heading {
     margin: 15px 0 15px;
