--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,7 @@ a span {
  .pattern {
    width: 100%;
    height: 100%;
-   background: url('../images/yokoshima.png');
+   background: url('../images/ptn.png');
    position: fixed;
    top: 0;
    left: 0;
