--- a/css/style.css
+++ b/css/style.css
@@ -569,7 +569,7 @@ a span {
  }
  .case-img {
    text-align: center;
-   margin-bottom: 30px;
+   margin-bottom: 10px;
    width: 90%;
  }
 
@@ -603,6 +603,7 @@ a span {
    right:5px;
    color: #B3B3B3;
    font-size:2.5rem;
+   padding-top: 4px;
  }
 
  .faq-list-item .answer {
