--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,7 +8,8 @@
     display:none;
   }
   .top-wrapper {
-    background-image: url("../images/top-sp.gif");
+    background-image: url("../images/top-cover.gif");
+    background-attachment: scroll;
     -webkit-background-size: cover;
     background-size: cover;
     position: fixed;
@@ -73,6 +74,7 @@
   }
   .top-wrapper {
     background-image: url("../images/top-cover.gif");
+    background-attachment: scroll;
     -webkit-background-size: cover;
     background-size: cover;
     position: fixed;
